--- a/MiXi/Main.storyboard
+++ b/MiXi/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="mZq-Jx-TbZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="mZq-Jx-TbZ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
@@ -53,6 +53,7 @@
                                 </state>
                                 <connections>
                                     <action selector="buttonSendPushed" destination="HIK-Ux-wgG" eventType="touchUpInside" id="DoO-1B-dqW"/>
+                                    <segue destination="2o9-YP-3sU" kind="modal" id="rVv-l2-DhQ"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入用户名：" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ga9-Bn-jK5">
@@ -124,57 +125,28 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
-                    <connections>
-                        <segue destination="SgO-f8-EdV" kind="relationship" relationship="viewControllers" id="PwR-yU-ekh"/>
-                        <segue destination="aUn-jj-UD9" kind="relationship" relationship="viewControllers" id="bJm-Uu-4to"/>
-                        <segue destination="epi-GG-Jpm" kind="relationship" relationship="viewControllers" id="W3v-7f-Z41"/>
-                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C4B-7D-Vbw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-976" y="684"/>
+            <point key="canvasLocation" x="-1084" y="684"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="7uL-aa-pkc">
+        <!--Da Ren View Controller-->
+        <scene sceneID="0xP-EZ-WFa">
             <objects>
-                <navigationController id="aUn-jj-UD9" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="ljS-wy-uVq"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Iey-4f-D1I">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="teE-bs-SPZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="OR2-DV-4Ov" customClass="DaRenViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3W7-Lo-Bkn"/>
+                        <viewControllerLayoutGuide type="bottom" id="Iap-gS-skf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yQc-bD-FQs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kLi-tT-Bir" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-412" y="1394"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="Eam-ct-Mjv">
-            <objects>
-                <navigationController id="epi-GG-Jpm" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Myf-8N-FcB"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0Aa-cV-VEM">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Xhj-yO-3Wu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-404" y="-66"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="pyv-Gq-8Om">
-            <objects>
-                <navigationController id="SgO-f8-EdV" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" id="pwi-vY-o0P"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="wvo-px-5u8">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vwQ-yX-lxl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-404" y="684"/>
+            <point key="canvasLocation" x="-630" y="38"/>
         </scene>
         <!--注册-->
         <scene sceneID="6uv-QF-7CC">
@@ -397,6 +369,50 @@
             </objects>
             <point key="canvasLocation" x="-1555" y="1441"/>
         </scene>
+        <!--Hun Li Bu Zhi View Controller-->
+        <scene sceneID="pJH-Tm-DcV">
+            <objects>
+                <viewController id="XWF-yC-hf4" customClass="HunLiBuZhiViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iYD-KH-KSL"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hvf-7v-ntQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="c2u-yI-t1Z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qI7-SQ-jUo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-630" y="1338"/>
+        </scene>
+        <!--User Center Table View Controller-->
+        <scene sceneID="HKo-cD-9t8">
+            <objects>
+                <tableViewController id="xD5-e0-2JI" customClass="UserCenterTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="gG6-R4-P4Y">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="eEn-ig-uDY">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eEn-ig-uDY" id="s0K-lU-xZF">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="xD5-e0-2JI" id="rZl-34-c15"/>
+                            <outlet property="delegate" destination="xD5-e0-2JI" id="0nA-a3-g7Q"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sGP-BV-uhY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-630" y="684"/>
+        </scene>
     </scenes>
     <resources>
         <image name="iphone5_93" width="63" height="32"/>
@@ -414,5 +430,8 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="rVv-l2-DhQ"/>
+    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.58039215690000001" green="0.48627450979999998" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
 </document>
