--- a/MiXi/TabBarView.xib
+++ b/MiXi/TabBarView.xib
@@ -30,7 +30,7 @@
                     </subviews>
                     <color key="backgroundColor" red="0.098039215686274508" green="0.10588235294117647" blue="0.10196078431372549" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8QR-WM-lki" customClass="HeartTabBsrButton" customModule="mixi" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8QR-WM-lki" customClass="HeartTabBsrButton" customModule="mixi" customModuleProvider="target">
                     <rect key="frame" x="128" y="0.0" width="64" height="57"/>
                     <state key="normal" backgroundImage="购物车"/>
                 </button>
